--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/postcss": "^4.1.16",
     "clsx": "^2.1.1",
     "lucide-react": "^0.547.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^3.3.1"
   },
