--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,13 @@
     "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/postcss": "^4.1.16",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.547.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.4",
     "react-simple-maps": "^3.0.0",
     "tailwind-merge": "^3.3.1"
   },
