--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+firebase-admin==6.2.0
 pydantic==2.5.0
-pydantic[email]==2.5.0
+pydantic-settings==2.1.0
 python-multipart==0.0.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
-firebase-admin==6.4.0
-google-cloud-firestore==2.13.1
-pillow==10.1.0
-pytesseract==0.3.10
-requests==2.31.0
 httpx==0.25.2
-email-validator==2.3.0
