--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -30,8 +30,8 @@ cryptography>=41.0.0
 pytesseract==0.3.10
 Pillow==10.1.0
 opencv-python==4.8.1.78
-numpy==1.24.3
-pandas==2.1.4
+numpy>=1.26.0
+pandas>=2.1.4
 
 # Text processing and NLP
 nltk==3.8.1
