--- a/backend/Dockerfile.alternative
+++ b/backend/Dockerfile.alternative
@@ -1,5 +1,5 @@
-# Multi-stage build for production
-FROM python:3.12-slim AS builder
+# Alternative Dockerfile with Python 3.11 for better compatibility
+FROM python:3.11-slim AS builder
 
 # Set working directory
 WORKDIR /app
@@ -22,7 +22,7 @@ RUN pip install --no-cache-dir --user --upgrade pip && \
     pip install --no-cache-dir --user -r requirements.txt
 
 # Production stage
-FROM python:3.12-slim
+FROM python:3.11-slim
 
 # Set working directory
 WORKDIR /app
