--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,37 +1,3 @@
-# Multi-stage build for production
-FROM python:3.12-slim AS builder
-
-# Set working directory
-WORKDIR /app
-
-# Install system dependencies for building
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    g++ \
-    build-essential \
-    pkg-config \
-    libglib2.0-dev \
-    libsm6 \
-    libxext6 \
-    libxrender-dev \
-    libgomp1 \
-    libjpeg-dev \
-    libpng-dev \
-    libtiff-dev \
-    gfortran \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install build tools first
-RUN pip install --upgrade pip setuptools wheel
-
-# Copy requirements first for better caching
-COPY requirements.txt .
-
-# Install Python dependencies with better error handling
-RUN pip install --no-cache-dir --user --upgrade pip && \
-    pip install --no-cache-dir --user -r requirements.txt
-
-# Production stage
 FROM python:3.12-slim
 
 # Set working directory
@@ -40,42 +6,22 @@ WORKDIR /app
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app \
-    PATH="/home/appuser/.local/bin:$PATH" \
-    QT_QPA_PLATFORM=offscreen \
-    OPENCV_IO_ENABLE_OPENEXR=1 \
-    OPENCV_IO_ENABLE_JPEG=1 \
-    OPENCV_IO_ENABLE_PNG=1 \
-    OPENCV_IO_ENABLE_TIFF=1 \
-    OPENCV_IO_ENABLE_WEBP=1
+    PYTHONPATH=/app
 
-# Install runtime dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
-    libglib2.0-0 \
-    libsm6 \
-    libxext6 \
-    libxrender-dev \
-    libgomp1 \
-    libjpeg-dev \
-    libpng-dev \
-    libtiff-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Create non-root user for security
-RUN adduser --disabled-password --gecos '' appuser
+# Copy requirements
+COPY requirements.txt .
 
-# Copy Python packages from builder stage to appuser's home
-COPY --from=builder /root/.local /home/appuser/.local
+# Install Python dependencies
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY . .
-
-# Change ownership to appuser
-RUN chown -R appuser:appuser /app
-
-# Switch to non-root user
-USER appuser
 
 # Expose port
 EXPOSE 8000
@@ -84,5 +30,5 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Run the application with gunicorn for production
-CMD ["gunicorn", "app.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--access-logfile", "-", "--error-logfile", "-"]
+# Run the application
+CMD ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
