--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ./visa-a05d3-firebase-adminsdk-fbsvc-f627f00882.json:/app/visa-a05d3-firebase-adminsdk-fbsvc-f627f00882.json:ro
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
