--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,50 +6,9 @@ pydantic-settings==2.1.0
 
 # Firebase and authentication
 firebase-admin==6.2.0
-PyJWT==2.8.0
 
-# HTTP and networking
-httpx==0.25.2
+# File upload support
 python-multipart==0.0.6
 
 # Environment and configuration
 python-dotenv==1.0.0
-
-# Production dependencies
-gunicorn==21.2.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-
-# Monitoring and logging
-structlog==23.2.0
-
-# Security
-cryptography>=41.0.0
-
-# OCR and document processing
-pytesseract==0.3.10
-Pillow>=10.1.0
-opencv-python-headless>=4.8.1.78
-numpy>=1.26.0
-pandas>=2.1.4
-
-# Text processing and NLP
-nltk>=3.8.1
-spacy>=3.7.2
-textblob>=0.17.1
-
-# Date and time processing
-python-dateutil>=2.8.2
-
-# Image processing
-scikit-image>=0.22.0
-matplotlib>=3.8.2
-
-# PDF processing and form filling
-PyPDF2>=3.0.1
-reportlab>=4.0.7
-pypdf>=3.17.4
-pdf2image>=1.16.3
-
-# Word document processing
-python-docx>=1.1.0
