--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 # Production configuration for VisaPrep AI Backend
 # Copy this to .env and update with your actual values
-
+GROQ_API_KEY="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"
 # Application Settings
 APP_NAME="VisaPrep AI Backend"
 APP_VERSION=1.0.0
