--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,9 @@ python-multipart==0.0.6
 
 # Environment and configuration
 python-dotenv==1.0.0
+
+# OCR dependencies
+groq==0.4.0
+pdf2image==1.16.3
+Pillow==10.1.0
+pytesseract==0.3.10
