--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,9 @@ python-multipart==0.0.6
 # Environment and configuration
 python-dotenv==1.0.0
 
+# HTTP client for external API calls
+httpx==0.25.2
+
 # OCR dependencies
 groq==0.4.0
 pdf2image==1.16.3
